tests/semantic/fail/compare_pointers6.c
void foo(void) {return;}
void bar(void) {return;}

int main(void) {
  if (foo < bar) {
    return 0;
  }
}
